<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ticknardif.hotspot.CreateAccountActivity">

    <EditText
        android:hint="@string/email"
        android:inputType="text"
        android:textAlignment="center"
        android:id="@+id/create_account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/create_account_username"
        android:inputType="text"
        android:textAlignment="center"
        android:id="@+id/create_account_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:id="@+id/create_account_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:id="@+id/create_account_password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:orientation="vertical"
        android:textAlignment="center"
        android:id="@+id/create_account_error_list"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <Button
        android:text="@string/create_account_submit"
        android:textAlignment="center"
        android:id="@+id/create_account_submit"
        android:onClick="createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
